# Qt_Project_PasswordKeeper

./: README.md
PasswordKeeper/: PasswordKeeper.pro  desktoppet.cpp  desktoppet.h  fileencryptor.cpp  fileencryptor.h  loginmanager.cpp  main.cpp  mainwindow.cpp  passwordgenerator.cpp  passwordgenerator.h  passwordmanager.cpp  passwordstrengthchecker.h  style.qss
PasswordManager/: CMakeLists.txt  backgroundLogin.qrc  cryptoutils.cpp  cryptoutils.h  encryptionhandler.cpp  encryptionhandler.h  loginmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordmanager.h  passwordstrengthchecker.cpp
